--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.4.38",
     "read-last-lines": "^1.8.0",
     "tailwindcss": "^3.4.3"
