--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "tailwind": "npx tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "author": "",
@@ -17,10 +17,9 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "node-cron": "^3.0.3",
+    "mongodb": "^6.6.1",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.38",
-    "read-last-lines": "^1.8.0",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
