--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
-    "node-fetch": "^3.3.2",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
