--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js",
+    "start": "node index.js",
     "tailwind": "npx tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "author": "",
