--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,43 @@
 services:
-  node:
-    build: .
-    container_name: node
-    expose:
-      - '3000'
+
+  myapp:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file: .env
+    container_name: myapp
+    ports:
+      - '3000:3000'
     restart: always
     depends_on:
       - mongo
     links:
       - mongo
     environment:
-      - MONGO_URI=${MONGO_URI}
-      - DB_NAME=${DB_NAME}
-    ports:
-      - '3000:3000'
-    volumes:
-      - .:/app
+      PORT: ${PORT}
+      MONGO_URI: ${MONGO_URI}
+      DB_NAME: ${DB_NAME}
     command: npm start
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - node-mongo-network
 
-    
   mongo:
     image: mongo:latest
     container_name: mongo
-    expose:
-      - '27017' 
     restart: always
+    ports:
+      - '27017:27017'
     volumes:
       - mongo_data:/data/db
-
+    networks:
+      - node-mongo-network  
+   
   
 volumes:
-  mongo_data:
+  mongo_data: 
+
+networks:
+  node-mongo-network:
+    driver: bridge
